# diving-coach

./: .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: README.md  app.py  compare_similarity.py  embeddings.py  ingest.py  loaders.py  prompts.py  requirements.txt  similarity.py  test-loaders.py  test_prompts.py  test_rag.py  test_similarity_toggle.py  test_structured_citations.py  test_vector_store.py  test_web_ingestion.py  vector_store.py  web_loader.py
api/config/: web_sources.json
api/data/: Freediving.txt
frontend/: .gitignore  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/metrics/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: BlobBackground.tsx  ChatHistoryProviderWrapper.tsx  ChatHistorySidebar.tsx  ChatInterface.tsx  Header.tsx  MetricsDashboard.tsx  PresetSelector.tsx  SettingsModal.tsx  ThemeToggle.tsx
frontend/components/__tests__/: ChatInterface.test.tsx  Header.test.tsx  MetricsDashboard.test.tsx  PresetSelector.test.tsx  ThemeToggle.test.tsx
frontend/contexts/: ChatHistoryContext.tsx  ThemeContext.tsx
frontend/data/: presets.ts
frontend/hooks/: useChatHistory.ts  useMetrics.ts  usePresets.ts  useRAGStats.ts  useThemeStyles.ts
frontend/theme/: theme.ts
frontend/types/: index.ts
frontend/utils/: api.ts
